--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
         <!-- Arrow navigation -->
         <div class="vertical-carousel-arrows">
           <button class="carousel-arrow-up" data-slide="prev" aria-label="Previous slide">
-            <i class="icon-arrow-up"></i>
+            <i class="bi bi-arrow-up-circle"></i>
           </button>
           <button class="carousel-arrow-down" data-slide="next" aria-label="Next slide">
-            <i class="icon-arrow-down"></i>
+            <i class="bi bi-arrow-down-circle"></i>
           </button>
         </div>
       </div>
@@ -383,7 +383,7 @@
 
                     </div>
                     <div class="card-footer text-end">
-                      <a href="#" class="text-decoration-none fw-bold  btn-main-link">View All →</a>
+                      <a href="events.html" class="text-decoration-none fw-bold  btn-main-link">View All →</a>
                     </div>
                   </div>
 
@@ -419,7 +419,7 @@
 
                     </div>
                     <div class="card-footer text-end">
-                      <a href="#" class="text-decoration-none fw-bold  btn-main-link">View All →</a>
+                      <a href="events.html" class="text-decoration-none fw-bold  btn-main-link">View All →</a>
                     </div>
                   </div>
                 </div>
@@ -782,16 +782,10 @@
                   </div>
 
                   <h2 class="fw-bold tittle head-color">Social Media </h2>
-                  <i class="bi bi-twitter-x"></i>
                   <div class="d-flex justify-content-start gap-3 fs-4">
                     <a href="#" aria-label="instagram" class="text-color"><i class="bi bi-instagram"></i></a>
-                    <a href="#" aria-label="x" class="text-color"><svg style="margin-top: -5px;"
-                        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-twitter-x" viewBox="0 0 16 16">
-                        <path
-                          d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z">
-                        </path>
-                      </svg></a>
+                    <a href="#" aria-label="x" class="text-color">
+                      <i class="bi bi-twitter-x"></i>  </a>
                     <a href="#" aria-label="youtube" class="text-color"><i class="bi bi-youtube"></i></a>
                     <a href="#" aria-label="linkedin" class="text-color"><i class="bi bi-linkedin"></i></a>
                   </div>
