--- a/events.html
+++ b/events.html
@@ -163,17 +163,20 @@
     <div class="container-fluid">
       <section class="bread-cramp mb-3 mt--40">
         <div class="card card-color">
+      
+
           <div class="card-body d-flex justify-content-between align-items-center flex-wrap">
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb m-0">
-                <li class="breadcrumb-item">
-                  <a href="index.html" class="btn-main-link fw-bold">Home</a>
-                </li>
-                <li class="breadcrumb-item active" aria-current="page">What's On</li>
-              </ol>
-            </nav>
+            <h2 class="fw-bold m-0 head-color">What’s On</h2>
             <div class="d-flex align-items-center gap-3">
-              <a href="index.html" class="btn btn-outline-dark d-flex">
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb m-0">
+                  <li class="breadcrumb-item">
+                    <a href="#" class="btn-main-link fw-bold">Home</a>
+                  </li>
+                  <li class="breadcrumb-item  text-color fw-semibold" aria-current="page">QM in the News</li>
+                </ol>
+              </nav>
+              <a href="index.html" class="btn btn-outline-dark d-flex ">
                 <i class="bi bi-arrow-left"></i>Back
               </a>
             </div>
@@ -184,8 +187,8 @@
       <div class="row">
         <!-- Calendar Sidebar -->
         <div class="col-lg-3">
-          <aside class="card card-color p-4 rounded-3 shadow-sm">
-            <h2 class="head-color h5 mb-4">Calendar</h2>
+          <aside class="card card-color p-3 rounded-3 shadow-sm d-flex align-items-center  section-card ">
+            <h2 class="head-color h5 mb-4 w-100 tittle">Calendar</h2>
             <div class="calendar-wrapper">
               <div id="calendar" class="flatpickr-calendar-custom"></div>
             </div>
@@ -205,23 +208,23 @@
               <div class="mb-3">
                 <label class="form-label">Event Categories</label>
                 <div class="d-flex flex-wrap gap-2">
-                  <button class="btn btn-sm btn-outline-secondary">Public Holiday</button>
-                  <button class="btn btn-sm btn-outline-secondary">Staff Workshop</button>
-                  <button class="btn btn-sm btn-outline-secondary">Staff Event</button>
-                  <button class="btn btn-sm btn-outline-secondary">More</button>
+                  <button class="btn btn-sm btn-outline-dark border-left-pink">Public Holiday</button>
+                  <button class="btn btn-sm btn-outline-dark border-left-blue">Staff Workshop</button>
+                  <button class="btn btn-sm btn-outline-dark border-left-orange">Staff Event</button>
+                  <button class="btn btn-sm btn-outline-dark">More</button>
                 </div>
               </div>
 
               <div class="mb-3">
                 <label class="form-label">Event Type</label>
                 <div class="d-flex flex-wrap gap-2">
-                  <button class="btn btn-sm btn-outline-secondary">Without register</button>
-                  <button class="btn btn-sm btn-outline-secondary">Register required</button>
+                  <button class="btn btn-sm  btn-outline-dark">Without register</button>
+                  <button class="btn btn-sm btn-outline-dark">Register required</button>
                 </div>
               </div>
 
               <button class="btn bg-main text-white w-100 mb-2">Apply Filter</button>
-              <button class="btn btn-outline-secondary w-100">Reset</button>
+              <button class="btn btn-outline-dark w-100">Reset</button>
             </div>
           </aside>
         </div>
