--- a/events.html
+++ b/events.html
@@ -22,11 +22,7 @@
   <!-- Calendar Custom CSS -->
   <link rel="stylesheet" href="asset/css/calendar.css">
   <style>
-    .btn.selected {
-      border-color: #000;
-      background-color: #000;
-      color: #fff;
-    }
+ 
   </style>
 </head>
 
@@ -256,21 +252,25 @@
             <div class="events-list">
               <!-- Event Card -->
                <a href="#" class="text-decoration-none">  <div class="event-card mb-3 p-3 border rounded border-left-pink">
-                <div class="d-flex gap-3">
+                <div class="d-flex flex-wrap gap-3">
                   <div class="event-date text-center">
-                    <div class="date-box bg-pink p-2 rounded">
+                    <div class="date-box bg-pink p-2 rounded" style="min-width: 80px;">
                       <span class="d-block fs-4 fw-bold head-color">25</span>
                       <span class="d-block head-color">Dec</span>
                     </div>
                   </div>
                   <div class="event-details flex-grow-1">
-                    <h3 class="h6 head-color">Action Model Drawing</h3>
+                    <h3 class="h6 head-color mb-2">Action Model Drawing</h3>
                     <p class="text-color mb-2">Public Holiday</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <i class="bi bi-clock main-color"></i>
-                      <span class="text-color">8:30 PM</span>
-                      <i class="bi bi-geo-alt main-color ms-3"></i>
-                      <span class="text-color">Event Location</span>
+                    <div class="d-flex flex-wrap align-items-center gap-2">
+                      <div class="d-flex align-items-center gap-2">
+                        <i class="bi bi-clock main-color"></i>
+                        <span class="text-color">8:30 PM</span>
+                      </div>
+                      <div class="d-flex align-items-center gap-2 ms-0 ms-sm-3">
+                        <i class="bi bi-geo-alt main-color"></i>
+                        <span class="text-color">Event Location</span>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -279,21 +279,25 @@
              
                      <!-- Event Card -->
                      <a href="#" class="text-decoration-none">  <div class="event-card mb-3 p-3 border rounded border-left-blue">
-                      <div class="d-flex gap-3">
+                      <div class="d-flex flex-wrap gap-3">
                         <div class="event-date text-center">
-                          <div class="date-box bg-blue p-2 rounded">
+                          <div class="date-box bg-blue p-2 rounded" style="min-width: 80px;">
                             <span class="d-block fs-4 fw-bold head-color">25</span>
                             <span class="d-block head-color">Dec</span>
                           </div>
                         </div>
                         <div class="event-details flex-grow-1">
-                          <h3 class="h6 head-color">Action Model Drawing</h3>
+                          <h3 class="h6 head-color mb-2">Action Model Drawing</h3>
                           <p class="text-color mb-2">Public Holiday</p>
-                          <div class="d-flex align-items-center gap-2">
-                            <i class="bi bi-clock main-color"></i>
-                            <span class="text-color">8:30 PM</span>
-                            <i class="bi bi-geo-alt main-color ms-3"></i>
-                            <span class="text-color">Event Location</span>
+                          <div class="d-flex flex-wrap align-items-center gap-2">
+                            <div class="d-flex align-items-center gap-2">
+                              <i class="bi bi-clock main-color"></i>
+                              <span class="text-color">8:30 PM</span>
+                            </div>
+                            <div class="d-flex align-items-center gap-2 ms-0 ms-sm-3">
+                              <i class="bi bi-geo-alt main-color"></i>
+                              <span class="text-color">Event Location</span>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -301,21 +305,25 @@
       </a>
                         <!-- Event Card -->
                         <a href="#" class="text-decoration-none">  <div class="event-card mb-3 p-3 border rounded border-left-orange">
-                          <div class="d-flex gap-3">
+                          <div class="d-flex flex-wrap gap-3">
                             <div class="event-date text-center">
-                              <div class="date-box bg-orange p-2 rounded">
+                              <div class="date-box bg-orange p-2 rounded" style="min-width: 80px;">
                                 <span class="d-block fs-4 fw-bold head-color">25</span>
                                 <span class="d-block head-color">Dec</span>
                               </div>
                             </div>
                             <div class="event-details flex-grow-1">
-                              <h3 class="h6 head-color">Action Model Drawing</h3>
+                              <h3 class="h6 head-color mb-2">Action Model Drawing</h3>
                               <p class="text-color mb-2">Public Holiday</p>
-                              <div class="d-flex align-items-center gap-2">
-                                <i class="bi bi-clock main-color"></i>
-                                <span class="text-color">8:30 PM</span>
-                                <i class="bi bi-geo-alt main-color ms-3"></i>
-                                <span class="text-color">Event Location</span>
+                              <div class="d-flex flex-wrap align-items-center gap-2">
+                                <div class="d-flex align-items-center gap-2">
+                                  <i class="bi bi-clock main-color"></i>
+                                  <span class="text-color">8:30 PM</span>
+                                </div>
+                                <div class="d-flex align-items-center gap-2 ms-0 ms-sm-3">
+                                  <i class="bi bi-geo-alt main-color"></i>
+                                  <span class="text-color">Event Location</span>
+                                </div>
                               </div>
                             </div>
                           </div>
