mega menu desktop

--- a/index.html
+++ b/index.html
@@ -94,10 +94,39 @@
                     aria-expanded="false">
                     Our Teams
                   </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Team Directory</a></li>
-                    <li><a class="dropdown-item" href="#">Departments</a></li>
-                  </ul>
+                  <div class="dropdown-menu mega-menu">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-md-4">
+                          <h6 class="text-uppercase fw-bold mb-3">Museums & Galleries</h6>
+                          <ul class="list-unstyled">
+                            <li><a href="#" class="dropdown-item">National Museum of Qatar</a></li>
+                            <li><a href="#" class="dropdown-item">Museum of Islamic Art</a></li>
+                            <li><a href="#" class="dropdown-item">Mathaf: Arab Museum</a></li>
+                            <li><a href="#" class="dropdown-item">Fire Station</a></li>
+                          </ul>
+                        </div>
+                        <div class="col-md-4">
+                          <h6 class="text-uppercase fw-bold mb-3">Departments</h6>
+                          <ul class="list-unstyled">
+                            <li><a href="#" class="dropdown-item">Human Resources</a></li>
+                            <li><a href="#" class="dropdown-item">Finance</a></li>
+                            <li><a href="#" class="dropdown-item">IT & Digital</a></li>
+                            <li><a href="#" class="dropdown-item">Marketing</a></li>
+                          </ul>
+                        </div>
+                        <div class="col-md-4">
+                          <h6 class="text-uppercase fw-bold mb-3">Resources</h6>
+                          <ul class="list-unstyled">
+                            <li><a href="#" class="dropdown-item">Team Directory</a></li>
+                            <li><a href="#" class="dropdown-item">Organization Chart</a></li>
+                            <li><a href="#" class="dropdown-item">Contact Information</a></li>
+                            <li><a href="#" class="dropdown-item">New Employee Guide</a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#">IN-Q</a></li>
                 <li class="nav-item dropdown">
