--- a/index.html
+++ b/index.html
@@ -76,20 +76,26 @@
               </div>
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">
+                <li class="nav-item dropdown has-submenu">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Welcome to QM
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">About QM</a></li>
+                    <li class="dropdown-submenu">
+                      <a class="dropdown-item " href="#">2nd level</a>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">HR Portal</a></li>
+                        <li><a class="dropdown-item" href="#">IT Services</a></li>
+                        <li><a class="dropdown-item" href="#">Finance</a></li>
+                      </ul>
+                    </li>
                     <li><a class="dropdown-item" href="#">History</a></li>
                   </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#">Our Leadership</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Mission And Vision</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Our Structure</a></li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown has-submenu">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     Our Teams
