--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
   <!--  Birthday canvas CSS -->
   <link rel="stylesheet" href="asset/css/canvas.css">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
 
 </head>
 
@@ -187,7 +191,9 @@
           <!-- Notifications Dropdown -->
           <div class="dropdown position-relative me-3 notifi">
             <a href="#" class="text-decoration-none position-relative" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="icon-Notification btn-main-link icon-md "></i>
+         
+              <i class="bi bi-megaphone-fill btn-main-link icon-md  animate__animated  animate__shakeX"></i>
+
               <span class="position-absolute top-0 start-100 translate-top badge rounded-pill bg-danger">
                 2
               </span>
@@ -225,7 +231,7 @@
           <div class="lang-toggle">
             <a href="#" class="btn btn-sm btn-main-link   d-flex">
               عربي
-              <span class="icon-lang icon-md mx-1"></span>
+        
             </a>
           </div>
         </div>
@@ -944,5 +950,6 @@
   <script src="asset/js/vertical-carousel.js"></script>
   <script src="asset/js/main.js"></script>
   <!-- <script src="asset/js/canvas.js"></script> -->
+   <script></script>
 </html>
 
