people card back card

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QM Intranet </title>
   <meta name="description" content="QM Intranet">
+  <meta name="theme-color" content="#1a1a1a">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<style>html{background:#1a1a1a!important;}</style>
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="asset/imgs/favicon.png">
   <link rel="apple-touch-icon" href="asset/imgs/favicon.png">
