--- a/mazaya list.html
+++ b/mazaya list.html
@@ -263,7 +263,7 @@
       <section class="bread-cramp mb-3 mt--40">
         <div class="card card-color">
           <div class="card-body d-flex justify-content-between align-items-center flex-wrap">
-            <h2 class="fw-bold m-0 head-color">Mazaya</h2>
+            <h2 class="fw-bold m-0 head-color">Mazaya list</h2>
             <div class="d-flex align-items-center gap-3">
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb m-0">
