--- a/mazya sub cat.html
+++ b/mazya sub cat.html
@@ -231,7 +231,7 @@
       <section class="bread-cramp mb-3 mt--40">
         <div class="card card-color">
           <div class="card-body d-flex justify-content-between align-items-center flex-wrap">
-            <h2 class="fw-bold m-0 head-color">Category Name  </h2>
+            <h2 class="fw-bold m-0 head-color">Automobile    </h2>
             <div class="d-flex align-items-center gap-3">
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb m-0">
@@ -258,8 +258,8 @@
           <div class="card card-color mb-4">
             <div class="card-body">
               <!-- Title and Sort -->
-              <div class="d-flex justify-content-between align-items-center mb-3 flex-wrap">
-                <h4 class="fw-bold head-color"><strong>Automobile  </strong> </h4>
+              <div class="d-flex justify-content-end align-items-center mb-3 flex-wrap">
+          
                 <div class="d-flex align-items-center gap-2 flex-wrap view-btns">
                   <span class="text-color">View</span>
                   <button class="btn btn-outline-secondary btn-sm active" id="listViewBtn" aria-label="listView" data-view="list">
