--- a/suplier details .html
+++ b/suplier details .html
@@ -247,7 +247,7 @@
                 
                   <span class="fw-bold fs-5 head-color">Toyota Service Bundle</span>
                 </div>
-                <div class="d-flex">
+                <div class="d-flex align-items-center">
                   <span class="badge bg-main fs-5 me-2">40% OFF</span>
                 <i class="text-color bi bi-chevron-down mx-2"></i>
 
@@ -287,7 +287,7 @@
                 <div>
                   <span class="fw-bold fs-5 head-color">Toyota Accessories Pack</span>
                 </div>
-                     <div class="d-flex">
+                     <div class="d-flex align-items-center">
                   <span class="badge bg-main fs-5 me-2">30% OFF</span>
                 <i class="text-color bi bi-chevron-down mx-2"></i>
 
@@ -326,7 +326,7 @@
                 <div>
                   <span class="fw-bold fs-5 head-color">Toyota Maintenance Check</span>
                 </div>
-                     <div class="d-flex">
+                     <div class="d-flex align-items-center">
                   <span class="badge bg-main fs-5 me-2">5% OFF</span>
                 <i class="text-color bi bi-chevron-down mx-2"></i>
 
@@ -395,6 +395,22 @@
                       <h5 class="fw-bold head-color mb-0">Toyota</h5>
                       <div class="text-color small">Sub name</div>
                     </div>
+                  </a>
+              </div>
+                  <div class="card-color card section-card related-offers my-3">
+                <h2 class="fw-bold head-color p-3 tittle">Related Offers </h2>
+                  <a href="suplier details .html" class="card text-decoration-none  card-color h-100 text-center border-0 shadow-sm transition-hover m-4">
+                  <div class="card-header d-flex justify-content-between align-items-center clickable-header collapsed" data-bs-toggle="collapse" data-bs-target="#offer1Details" aria-expanded="false" aria-controls="offer1Details" style="cursor:pointer;">
+                <div>
+                
+                  <span class="fw-bold fs-5 head-color">Toyota Service Bundle</span>
+                </div>
+                <div class="d-flex align-items-center">
+                  <span class="badge bg-main fs-5 me-2">40% OFF</span>
+                <i class="text-color bi bi-chevron-right mx-2"></i>
+
+                </div>
+              </div>
                   </a>
               </div>
             </div>
