--- a/loader 3.html
+++ b/loader 3.html
@@ -77,10 +77,7 @@
           a15,15 0 1,0 0.00001,0
           z"/>
       <!-- Hidden morph targets -->
-      <path id="circle" fill="#78aafa" stroke="#000" stroke-width="1" style="display:none"
-        d="M20,5
-          a15,15 0 1,0 0.00001,0
-          z"/>
+      <path id="circle" fill="#78aafa" stroke="#000" stroke-width="1" style="display:none" d="M35.00,20.00L34.27,24.62L32.16,28.76L28.90,32.02L24.76,34.12L20.00,35.00L15.24,34.12L11.10,32.02L7.84,28.76L5.73,24.62L5.00,20.00L5.73,15.38L7.84,11.24L11.10,7.98L15.24,5.88L20.00,5.00L24.76,5.88L28.90,7.98L32.16,11.24L34.27,15.38Z"/>
       <path id="square" fill="#ffc201" stroke="#000" stroke-width="1" style="display:none"
         d="M5,5 h30 v30 h-30 z"/>
       <path id="diamond" fill="#ec3c8a" stroke="#000" stroke-width="1" style="display:none"
